Now player can use the Rune Knowledge Fragment to play the Rune Game.