@@ -13,13 +13,15 @@ public class RuneGameLayer {
     public RuneGameLayer(int[][] level, Queue<RuneGameBrand> brands) {
         this.maxRow = level.length;
         this.maxCol = level[0].length;
-        this.brands = new RuneGameBrand[maxRow][maxCol];
-        for (int i = 0; i < maxRow; i++) {
-            for (int j = 0; j < maxCol; j++) {
+        this.brands = new RuneGameBrand[this.maxRow][this.maxCol];
+        for (int i = 0; i < this.maxRow; i++) {
+            for (int j = 0; j < this.maxCol; j++) {
                 int hasBrand = level[i][j];
                 if (hasBrand != 0) {
                     RuneGameBrand poll = brands.poll();
-                    poll.setHasBrand(hasBrand);
+                    if (poll != null) {
+                        poll.setHasBrand(hasBrand);
+                    }
                     this.brands[i][j] = poll;
                 } else {
                     RuneGameBrand brand = new RuneGameBrand(RuneGameBrand.randomElement());
@@ -41,7 +43,7 @@ public class RuneGameLayer {
                     RuneGameBrand brand = brandList.getFirst();
                     brand.setHasBrand(hasBrand);
                     this.brands[i][j] = brand;
-                    brandList.remove(0);
+                    brandList.removeFirst();
                 } else {
                     RuneGameBrand brand = new RuneGameBrand(RuneGameBrand.randomElement());
                     brand.setHasBrand(hasBrand);
